# BeetleWire

./: Cargo.toml  README.md
.github/workflows/: rust.yml
Shared/: readme.md
src/: client.rs  main.rs  server.rs
