[package]
name = "BeetleWire"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
tungstenite = "0.14"
url = "2.2"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
indicatif = "0.16"
crossterm = "0.22"
local-ip-address = "0.4"